--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/p/{{ name }}/{{name}}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/c/{{ name }}/{{name}}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
