--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,14 +17,15 @@ build:
 
 requirements:
   host:
-    - python >=2.7
+    - python >=3.7
     - pip
     - setuptools >=30.3.0
+    - setuptools_scm >=6
     - pyct >=0.4.4
     - wheel
 
   run:
-    - python >=2.7
+    - python >=3.7
     - pyct >=0.4.4
 
 test:
@@ -32,10 +33,14 @@ test:
     - colorcet
 
 about:
-  home: http://github.com/pyviz/colorcet
+  home: https://github.com/holoviz/colorcet
   license: CC-BY-4.0
   license_file: LICENSE.txt
   summary: Collection of perceptually uniform colormaps
+  description: |
+    HoloViz Colorcet provides perceptually accurate, 256-color colormaps,
+    including both continuous and categorical types, designed for use with
+    tools like Bokeh, Matplotlib, HoloViews, and Datashader.
 
 extra:
   recipe-maintainers:
