--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "colorcet" %}
 {% set version = "3.1.0" %}
-{% set sha256 = "2921b3cd81a2288aaf2d63dbc0ce3c26dcd882e8c389cc505d6886bf7aa9a4eb" %}
 
 package:
   name: {{ name|lower }}
@@ -8,12 +7,12 @@ package:
 
 source:
   url: https://pypi.org/packages/source/c/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 2921b3cd81a2288aaf2d63dbc0ce3c26dcd882e8c389cc505d6886bf7aa9a4eb
 
 build:
   number: 1
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
@@ -21,15 +20,17 @@ requirements:
     - pip
     - setuptools >=30.3.0
     - setuptools_scm >=6
-
   run:
     - python >={{ python_min }}
 
 test:
   requires:
     - python {{ python_min }}
+    - pip
   imports:
     - colorcet
+  commands:
+    - pip check
 
 about:
   home: https://github.com/holoviz/colorcet
